tests/vrs/interface/parts/writeactions_00_missing_semicolon_expected.txt
error: expected `;`, found `}`
     --> tests/vrs/interface/parts/writeactions_00_missing_semicolon.vrs:1:23
      |
    1 |  WriteActions { A -> B }
      |                        ^ help: add `;` here.
